--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>"Welcome to hercules where fitness meets passion and dedication. Our gym is not just a place to work out; it's a community that inspires and empowers you to achieve your fitness goals. With state-of-the-art facilities, expert trainers, and a range of invigorating classes, we're here to support you on your fitness journey. Join us and embrace a healthier, stronger, and more vibrant you. Your transformation starts here!"</p>
     </div>
     <div class="link">
-      <a href="srt.html" class="hire">let's start</a>
+      <a href="Srt.html" class="hire">let's start</a>
     </div>
   </div>
 </body>
