--- a/create new.html
+++ b/create new.html
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
-<link href="create new.css" rel="stylesheet">
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Create New Account</title>
-</head>
-
-<body>
-    <div class="signup-container">
-        <h1>Create New Account</h1>
-        <form>
-            <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter your full name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
-
-            <button type="submit">Sign Up</button>
-        </form>
+<div class="login-box">
+    <link href="create new.css" rel="stylesheet">
+    <h2>Login</h2>
+    <form>
+    <div class="user-box">
+    <input type="text" name="" required="">
+    <label>Username</label>
     </div>
-</body>
-</html>
+    <div class="user-box">
+    <input type="password" name="" required="">
+    <label>Password</label>
+    </div>
+    <a href="#">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    Submit
+    </a>
+    </form>
+    </div>
