--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <li><a href="con.html">Contact</a></li>
       </ul>
       <div class="buttons">
-        <a href="login.html" class="login">Log in</a>
-        <a href="create new.html" class="btn">Register</a>
+        <a href="create new.html" class="login">Log in</a>
+        <a href="login.html" class="btn">Register</a>
       </div>
     </nav>
     <div class="content">
