--- a/path.html
+++ b/path.html
@@ -101,7 +101,7 @@ backface-visibility: inherit;
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: rgb(91, 79, 89);
+  background-color: rgba(83, 86, 87, 0.751);
   position: relative;
   border-radius: 6px;
 }
@@ -209,3 +209,4 @@ backface-visibility: inherit;
 
 </body>
 </html>
+
