--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="progress.html">progress tracker</a></li>
+        <li><a href="fat.html">bmi</a></li>
         <li><a href="path.html">map</a></li>
         <li><a href="con.html">Contact</a></li>
       </ul>
