--- a/path.html
+++ b/path.html
@@ -101,7 +101,9 @@ backface-visibility: inherit;
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: rgba(83, 86, 87, 0.751);
+  background-color: #e6852bb1;
+  opacity: .9;
+  font-weight: bolder;
   position: relative;
   border-radius: 6px;
 }
