--- a/index.html
+++ b/index.html
@@ -35,7 +35,111 @@
       <a href="start.html" class="hire">let's start</a>
     </div>
   </div>
+  <!DOCTYPE html>
+  <html>
+  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Create two equal columns that floats next to each other */
+  .column {
+    float: right;
+    width: 50%;
+    padding: 20px;
+    height: 300px; 
+    background-color: #8be2a3;
+    height: 400px;
+    width: 760px;
+    border-radius: 20px;
+    align-items:center ;
+    margin: 30px auto 30px auto;
+    display: block;
+    border: solid 1px #daa88e;
+    box-shadow: 0 0 40px 0 #5210cc/* Should be removed. Only for demonstration */
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+    
+  }
+  .column2
+  {
+    float: left;
+    width: 50%;
+    padding: 20px;
+    height: 300px; 
+    background-color: #010101;
+    height: 400px;
+    width: 760px;
+    border-radius: 20px;
+    align-items:center ;
+    margin: 30px auto 30px auto;
+    display: block;
+    border: solid 1px #d18156;
+    box-shadow: 0 0 60px 0 #0dab1f
+  }
+  
+  </style>
+  </head>
+  <body>
+  <div class="row">
+    <div class="column" style="background-image: url(back.jpg);">
+      <h2></h2>
+      <center>
+      <BR>
+        <BR>
+          <BR> 
+
+      <p>ARE YOU UNERWEIGHT?</p>
+      <BR>
+        <BR>
+          <BR>
+      THEN CLIK HERE TO VIEW CREASH COURSE
+      <br>
+      <br>
+      <br>
+      <br>
+      <center>
+      <button>
+        view
+      </button>
+      </center>
+      </center>
+    </div>
+    <div class="column2" style="background-color:#d27a7a;">
+      <h2></h2>
+      <center>
+      <BR>
+        <BR>
+          <BR>
+      <p>ARE YOU OVER WEIGHT</p>
+      <BR>
+        <BR>
+          <BR>
+      THEN CLIK HERE TO VIEW CREASH COURSE
+      <br>
+      <br>
+      <br>
+      <br>
+      <center>
+      <button>
+        view
+      </button>
+      </center>
+    </div>
+  </div>
+  </center>
+  
+  </body>
+  </html>
 </body>
+  
      <footer>
         <div class="contact-form">
             <h2>Contact Us</h2>
