--- a/certi.html
+++ b/certi.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Certificate Generator</title>
+  <br>
+  <br>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -9,10 +11,13 @@
     }
     
     .certificate {
-      border: 2px solid #333;
+      border: 12px solid #ff0d0d;
       padding: 20px;
       max-width: 600px;
-      margin: 0 auto;
+      margin: 10px auto;
+      background-color: #9db5ce;
+      position: relative;
+     
     }
 
     h1 {
