--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="fat.html">bmi</a></li>
         <li><a href="path.html">map</a></li>
-        <li><a href="certi.html">Certificate</a></li>
+        <li><a href="course1.html">courses</a></li>
       </ul>
       <div class="buttons">
         <a href="create new.html" class="login">Log in</a>
