--- a/course1.html
+++ b/course1.html
@@ -45,7 +45,7 @@
     <div id="video-section">
       <h2>Video Section</h2>
       <video id="myVideo" controls>
-        <source src="5 At_-_Home Exercises _to _Lose Belly Fat (CRAZY FAST).mp4" />
+        <source src="5 At_-_Home Exercises _to _Lose Belly Fat (CRAZY FAST)(1).mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
